# Qrcode-Generator

./: .gitignore  LICENSE  README.md  generate_qr.py  pyproject.toml
qrgen/: __init__.py  __main__.py  cli.py  generator.py
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts  qrgenRunner.ts  webviewPanel.ts
