[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrcode-generator"
version = "1.0.1"
description = "A cross-platform CLI tool to generate QR codes from your terminal"
authors = [{ name = "Koshal Bonde" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["qrcode", "cli", "generator", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "qrcode>=7.4.2",
    "Pillow>=10.0.0",
    "colorama>=0.4.6",
]

[project.scripts]
qrgen = "qrgen.cli:main"

[project.urls]
Repository = "https://github.com/koshal50/Qrcode-Generator"

[tool.setuptools.packages.find]
include = ["qrgen*"]